--- a/lost-and-found/posts/templates/detail1.html
+++ b/lost-and-found/posts/templates/detail1.html
@@ -131,6 +131,7 @@
                     {% endif %}
                 </p>
                 <div class="item-details">
+                    <p><b>Post ID:</b> {{ post.id }}</p>
                     <p><b>Item Type:</b> {{ post.assetType }}</p>
                     <p><b>Location:</b> {{ post.location }}</p>
                     <p><b>Date and Time:</b> {{ post.date_time|date:"d/m/Y H:i" }}</p>
