Updated UI in my posts page

--- a/lost-and-found/accounts/templates/my_posts.html
+++ b/lost-and-found/accounts/templates/my_posts.html
@@ -286,10 +286,10 @@
                                 </small>
                             </div> -->
                         </a>
-                        <div class="card-footer text-center">
+                        <!-- <div class="card-footer text-center">
                             <a href="{% url 'edit_post' post.id %}" class="btn btn-warning btn-sm">Edit</a>
                             <button class="btn btn-danger btn-sm close-post" data-post-id="{{ post.id }}">Close</button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             {% endfor %}
